apps/docs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docs
  labels:
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
